# ingestion-lib

./: .gitignore  2. In your `setUp` method, create an instance of the `DataContract` class with the desired values  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test-output.xml
.github/workflows/: main.yml  test.yml
examples/: create_orchestration.py
examples/resources/: databricks_job.yml  ingestion.yml
ingestion_lib/: provider.py
ingestion_lib/extractors/: base.py  flat_file.py  oracle.py  rest_api.py  sql_server.py
ingestion_lib/model/: base.py  holman.py
ingestion_lib/sinks/: base.py  delta.py
ingestion_lib/utils/: data_contract.py  data_quality.py  databricks_utils.py  gx.py  log_analytics.py  swagger_parser.py
tests/: conftest.py  db_test_settings.py  db_testing_utils.py  holman.py  test_databricks_provider.py  test_oracle.py  test_settings.py  test_sinks_delta.py
tests/db_scripts/db/: db.sql
tests/db_scripts/ddl/: table.sql
tests/db_scripts/dml/: data.sql
tests/extractors/: test_extractor.py  test_oracle.py  test_rest_api.py
tests/utils/: test_contracts.py  test_data_quality_validator.py  test_databricks_utils.py  test_gx_runner.py
