[tool.poetry]
name = "ingestion-lib"
version = "0.0.4"
description = "Library for data ingestion"
authors = ["Ruslan_Mendybayev <ruslan_mendybayev@epam.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = "1.10.6"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
